cmake_minimum_required(VERSION 3.20)
project(example)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_executable(lib_log lib/log/log.c)
set_target_properties(lib_log PROPERTIES C_STANDARD 11 C_STANDARD_REQUIRED ON C_EXTENSIONS OFF)
target_compile_definitions(lib_log PRIVATE )
target_include_directories(lib_log PRIVATE /home/hui/c_std/include)
target_link_libraries(lib_log PRIVATE )
add_executable(container_test tests/container/graph_test.c tests/container/linklist_test.c tests/container/map_test.c tests/container/queue_test.c tests/container/stack_test.c tests/container/tree_test.c src/container/graph.c src/container/linklist.c src/container/map.c src/container/queue.c src/container/stack.c src/container/tree.c lib/unitest/unitest.c)
set_target_properties(container_test PROPERTIES C_STANDARD 11 C_STANDARD_REQUIRED ON C_EXTENSIONS OFF)
target_compile_definitions(container_test PRIVATE -DUNITEST_MAIN)
target_include_directories(container_test PRIVATE /home/hui/c_std/include)
target_link_libraries(container_test PRIVATE pthread)
add_executable(sort_test tests/sort_test.c)
set_target_properties(sort_test PROPERTIES C_STANDARD 11 C_STANDARD_REQUIRED ON C_EXTENSIONS OFF)
target_compile_definitions(sort_test PRIVATE -DUNITEST_MAIN)
target_include_directories(sort_test PRIVATE /home/hui/c_std/include)
target_link_libraries(sort_test PRIVATE )
